src/test/deca/test_compilateur/syntax/invalid/created/class/bad_decl_class.deca
// Description :
//    decl class extends vide
//
// Resultats :
//		Syntaxe error

class A extends {

}